# xkcdxx

./: LICENSE  README.md  build-pkg.sh  build-pkgs.sh
binary/: CMakeLists.txt
binary/debian/: control  install  rules
binary/inc/: impl.h  xkcd.h  xkcdxx.h
binary/src/: impl.cpp  xkcd.cpp  xkcdxx.cpp
binary/test/: test.cpp
debian/: control  rules
inc/: impl.h  xkcd.h  xkcdxx.h
python/: setup.py  test.py  xkcdxx.py
python/debian/: control  rules
python/xkcdxx/: __init__.py
src/: impl.cpp  xkcd.cpp  xkcdxx.cpp
test/: test.c  test.cpp
